--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,81 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* main css start form here */
+input{
+  width:350px;
+  padding: 9px;
+  border: none;
+  outline: none;
+  box-shadow:  4px  4px 4px rgba(0,0,0,0.5);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  width:60px;
+  padding: 9px;
+  background: rgb(19, 141, 2);
+  border: none;
   color: white;
+  border-radius:5px;
+  margin-left: 10px;
+  cursor: pointer;
+  text-align: center;
+
+}
+.form{
+  margin-top: 50px;
+}
+.editBtn{
+  background: orange;
+}
+.deleteBtn{
+  background: rgb(230, 20, 20);
+  margin-right: 5px;
+}
+.todoList{
+  margin-top: 30px;
+}
+.todo{
+  margin: 5px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width:100%;
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+}
+.todo p{
+  margin-left: 5px ;
+  font-size:1.2rem;
+ 
+}
+.noData{
+  color: red;
+  font-size:1.5rem;
+}
+.complete{
+  text-decoration: line-through;
+}
+.completeBtn{
+  background: green;
+  width: 78px;
 }
 
-.App-link {
-  color: #61dafb;
+/* total section */
+.total{
+ background: rgb(30, 66, 47);
+ width: 250px;
+ margin:  0 auto;
+ color: white;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.total p{
+  font-size: 1.2rem;
+  line-height: 50%;
+  letter-spacing: 1px;
+  /* font-weight: bold; */
+}
+.totalTodo{
+ padding-top: 20px;
+}
+.completedTodo{
+  padding-bottom: 20px;
 }
